--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,10 @@
 name: Thomas
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Soon to be forever done with school - but never done learning
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
+# avatar: 
 #
 # Flags below are optional
 #
