Added some socials

--- a/_config.yml
+++ b/_config.yml
@@ -16,16 +16,16 @@ description: Soon to be forever done with school - but never done learning
 
 # Includes an icon in the footer for each username you enter
 footer-links:
-  dribbble:
-  email:
-  facebook:
-  flickr:
-  github: barryclark/jekyll-now
+  dribbble: # what?
+  email: thomas@braytel.net
+  facebook: # nah
+  flickr: # nope
+  github: dtbray/dtbray.github.io
   instagram:
-  linkedin:
+  linkedin: in/daniel-thomas-bray-a0ba55bb/
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: # noopers
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
