--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Musings on Life
+name: [Always Learning]
 
 # Short bio or description (displayed in the header)
-description: always learning
+description: 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 # avatar:
@@ -17,7 +17,7 @@ description: always learning
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: thomas@braytel.net
   facebook:
   flickr:
   github: dtbray
