--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: [Always Learning]
 
 # Short bio or description (displayed in the header)
-description: 
+# description:  
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 # avatar:
@@ -72,7 +72,7 @@ sass:
   style: :expanded # You might prefer to minify using :compressed
 
 # Use the following plug-ins
-gems:
+plugins:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
 
