--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: [Always Learning]
+name: \[Always Learning\]
 
 # Short bio or description (displayed in the header)
-# description:  
+description: One URL at a Time  
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 # avatar:
@@ -84,4 +84,4 @@ exclude:
   - README.md
   - CNAME
 
-theme: minima
+remote_theme: "mmistakes/minimal-mistakes"
