--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: [Always Learning]
+name: Always Learning
 
 # Short bio or description (displayed in the header)
 description: One URL at a Time  
